--- a/media.html
+++ b/media.html
@@ -4,8 +4,13 @@ title: All Media
 ---
 
 {% for record in site.data.media %}
-<li>
-  <h2>{{ record.name }} ({{ record.type }})</h2>
-  <p>{{ record.caption }}</p>
-</li>
+<figure>
+  {% if record.type == 'Image' %}
+  <img src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}.jpg" alt="">
+  {% endif %}
+  <figcaption>
+    <p><strong>{{ record.caption }}</strong></p>
+  <p>{{ record.alternativetext }}</p>
+  </figcaption>
+</figure>
 {% endfor %}
