--- a/works-cited.html
+++ b/works-cited.html
@@ -5,11 +5,11 @@ title: Works Cited
 
 <div id="works-cited">
 
-<p>Arola, Kristin L, Jennifer Sheppard, and Cheryl E. Ball. _Writer/Designer: A Guide to Making
-Multimodal Projects_. Boston: Bedford/St. Martins, 2014.</p>
+<p>Arola, Kristin L, Jennifer Sheppard, and Cheryl E. Ball. <em>Writer/Designer: A Guide to Making
+  Multimodal Projects</em>. Boston: Bedford/St. Martins, 2014.</p>
 
-<p>Bass, Randall. “Disrupting Ourselves: The Problem of Learning in Higher Education.” *Educause
-Review*. 21 March 2012. Web. 7 Feb. 2014. http://er.educause.edu/articles/2012/3/disrupting-ourselves-the-problem-of-learning-in-higher-education<p>
+<p>Bass, Randall. “Disrupting Ourselves: The Problem of Learning in Higher Education.” <em>Educause
+  Review</em>. 21 March 2012. Web. 7 Feb. 2014. <a target="_blank" href="http://er.educause.edu/articles/2012/3/disrupting-ourselves-the-problem-of-learning-in-higher-education</a><p>
 
 <p>Boyle, Casey. “The Rhetorical Question Concerning Glitch.” _Computers and Composition_ 35 (March 2015): 12-29.</p>
 
