--- a/works-cited.html
+++ b/works-cited.html
@@ -9,7 +9,7 @@ title: Works Cited
   Multimodal Projects</em>. Boston: Bedford/St. Martins, 2014.</p>
 
 <p>Bass, Randall. “Disrupting Ourselves: The Problem of Learning in Higher Education.” <em>Educause
-  Review</em>. 21 March 2012. Web. 7 Feb. 2014. <a href="http://er.educause.edu/articles/2012/3/disrupting-ourselves-the-problem-of-learning-in-higher-education/" target="_blank"<http://er.educause.edu/articles/2012/3/disrupting-ourselves-the-problem-of-learning-in-higher-education/</a><p>
+  Review</em>. 21 March 2012. Web. 7 Feb. 2014. <a href="http://er.educause.edu/articles/2012/3/disrupting-ourselves-the-problem-of-learning-in-higher-education/" target="_blank">http://er.educause.edu/articles/2012/3/disrupting-ourselves-the-problem-of-learning-in-higher-education/</a><p>
 
 <p>Boyle, Casey. “The Rhetorical Question Concerning Glitch.” _Computers and Composition_ 35 (March 2015): 12-29.</p>
 
